fix: added more swagger documentation
